crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM110_SIM110.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM110.py:3:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in iterable)` instead of `for` loop
  |
1 |   def f():
2 |       # SIM110
3 | /     for x in iterable:
4 | |         if check(x):
5 | |             return True
6 | |     return False
  | |________________^ SIM110 (reimplemented-builtin)
  |
  = help: Replace with `return any(check(x) for x in iterable)`

ℹ Unsafe fix
1 1 | def f():
2 2 |     # SIM110
3   |-    for x in iterable:
4   |-        if check(x):
5   |-            return True
6   |-    return False
  3 |+    return any(check(x) for x in iterable)
7 4 | 
8 5 | 
9 6 | def f():

SIM110.py:25:5: SIM110 (reimplemented-builtin) [*] Use `return all(not check(x) for x in iterable)` instead of `for` loop
   |
23 |   def f():
24 |       # SIM111
25 | /     for x in iterable:
26 | |         if check(x):
27 | |             return False
28 | |     return True
   | |_______________^ SIM110 (reimplemented-builtin)
   |
   = help: Replace with `return all(not check(x) for x in iterable)`

ℹ Unsafe fix
22 22 | 
23 23 | def f():
24 24 |     # SIM111
25    |-    for x in iterable:
26    |-        if check(x):
27    |-            return False
28    |-    return True
   25 |+    return all(not check(x) for x in iterable)
29 26 | 
30 27 | 
31 28 | def f():

SIM110.py:33:5: SIM110 (reimplemented-builtin) [*] Use `return all(x.is_empty() for x in iterable)` instead of `for` loop
   |
31 |   def f():
32 |       # SIM111
33 | /     for x in iterable:
34 | |         if not x.is_empty():
35 | |             return False
36 | |     return True
   | |_______________^ SIM110 (reimplemented-builtin)
   |
   = help: Replace with `return all(x.is_empty() for x in iterable)`

ℹ Unsafe fix
30 30 | 
31 31 | def f():
32 32 |     # SIM111
33    |-    for x in iterable:
34    |-        if not x.is_empty():
35    |-            return False
36    |-    return True
   33 |+    return all(x.is_empty() for x in iterable)
37 34 | 
38 35 | 
39 36 | def f():

SIM110.py:55:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in iterable)` instead of `for` loop
   |
53 |   def f():
54 |       # SIM110
55 | /     for x in iterable:
56 | |         if check(x):
57 | |             return True
58 | |     else:
59 | |         return False
   | |____________________^ SIM110 (reimplemented-builtin)
   |
   = help: Replace with `return any(check(x) for x in iterable)`

ℹ Unsafe fix
52 52 | 
53 53 | def f():
54 54 |     # SIM110
55    |-    for x in iterable:
56    |-        if check(x):
57    |-            return True
58    |-    else:
59    |-        return False
   55 |+    return any(check(x) for x in iterable)
60 56 | 
61 57 | 
62 58 | def f():

SIM110.py:64:5: SIM110 (reimplemented-builtin) [*] Use `return all(not check(x) for x in iterable)` instead of `for` loop
   |
62 |   def f():
63 |       # SIM111
64 | /     for x in iterable:
65 | |         if check(x):
66 | |             return False
67 | |     else:
68 | |         return True
   | |___________________^ SIM110 (reimplemented-builtin)
   |
   = help: Replace with `return all(not check(x) for x in iterable)`

ℹ Unsafe fix
61 61 | 
62 62 | def f():
63 63 |     # SIM111
64    |-    for x in iterable:
65    |-        if check(x):
66    |-            return False
67    |-    else:
68    |-        return True
   64 |+    return all(not check(x) for x in iterable)
69 65 | 
70 66 | 
71 67 | def f():

SIM110.py:73:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in iterable)` instead of `for` loop
   |
71 |   def f():
72 |       # SIM110
73 | /     for x in iterable:
74 | |         if check(x):
75 | |             return True
76 | |     else:
77 | |         return False
   | |____________________^ SIM110 (reimplemented-builtin)
78 |       return True
   |
   = help: Replace with `return any(check(x) for x in iterable)`

ℹ Unsafe fix
70 70 | 
71 71 | def f():
72 72 |     # SIM110
73    |-    for x in iterable:
74    |-        if check(x):
75    |-            return True
76    |-    else:
77    |-        return False
   73 |+    return any(check(x) for x in iterable)
78 74 |     return True
79 75 | 
80 76 | 

SIM110.py:83:5: SIM110 (reimplemented-builtin) [*] Use `return all(not check(x) for x in iterable)` instead of `for` loop
   |
81 |   def f():
82 |       # SIM111
83 | /     for x in iterable:
84 | |         if check(x):
85 | |             return False
86 | |     else:
87 | |         return True
   | |___________________^ SIM110 (reimplemented-builtin)
88 |       return False
   |
   = help: Replace with `return all(not check(x) for x in iterable)`

ℹ Unsafe fix
80 80 | 
81 81 | def f():
82 82 |     # SIM111
83    |-    for x in iterable:
84    |-        if check(x):
85    |-            return False
86    |-    else:
87    |-        return True
   83 |+    return all(not check(x) for x in iterable)
88 84 |     return False
89 85 | 
90 86 | 

SIM110.py:124:5: SIM110 (reimplemented-builtin) Use `return any(check(x) for x in iterable)` instead of `for` loop
    |
122 |           pass
123 |
124 | /     for x in iterable:
125 | |         if check(x):
126 | |             return True
127 | |     return False
    | |________________^ SIM110 (reimplemented-builtin)
    |
    = help: Replace with `return any(check(x) for x in iterable)`

SIM110.py:134:5: SIM110 (reimplemented-builtin) Use `return all(not check(x) for x in iterable)` instead of `for` loop
    |
132 |           pass
133 |
134 | /     for x in iterable:
135 | |         if check(x):
136 | |             return False
137 | |     return True
    | |_______________^ SIM110 (reimplemented-builtin)
    |
    = help: Replace with `return all(not check(x) for x in iterable)`

SIM110.py:144:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in iterable)` instead of `for` loop
    |
143 |       # SIM110
144 | /     for x in iterable:
145 | |         if check(x):
146 | |             return True
147 | |     return False
    | |________________^ SIM110 (reimplemented-builtin)
    |
    = help: Replace with `return any(check(x) for x in iterable)`

ℹ Unsafe fix
141 141 |     x = 1
142 142 | 
143 143 |     # SIM110
144     |-    for x in iterable:
145     |-        if check(x):
146     |-            return True
147     |-    return False
    144 |+    return any(check(x) for x in iterable)
148 145 | 
149 146 | 
150 147 | def f():

SIM110.py:154:5: SIM110 (reimplemented-builtin) [*] Use `return all(not check(x) for x in iterable)` instead of `for` loop
    |
153 |       # SIM111
154 | /     for x in iterable:
155 | |         if check(x):
156 | |             return False
157 | |     return True
    | |_______________^ SIM110 (reimplemented-builtin)
    |
    = help: Replace with `return all(not check(x) for x in iterable)`

ℹ Unsafe fix
151 151 |     x = 1
152 152 | 
153 153 |     # SIM111
154     |-    for x in iterable:
155     |-        if check(x):
156     |-            return False
157     |-    return True
    154 |+    return all(not check(x) for x in iterable)
158 155 | 
159 156 | 
160 157 | def f():

SIM110.py:162:5: SIM110 (reimplemented-builtin) [*] Use `return any(x.isdigit() for x in "012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ")` instead of `for` loop
    |
160 |   def f():
161 |       # SIM110
162 | /     for x in "012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ":
163 | |         if x.isdigit():
164 | |             return True
165 | |     return False
    | |________________^ SIM110 (reimplemented-builtin)
    |
    = help: Replace with `return any(x.isdigit() for x in "012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ")`

ℹ Unsafe fix
159 159 | 
160 160 | def f():
161 161 |     # SIM110
162     |-    for x in "012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ":
163     |-        if x.isdigit():
164     |-            return True
165     |-    return False
    162 |+    return any(x.isdigit() for x in "012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ9012ß9💣2ℝ")
166 163 | 
167 164 | 
168 165 | def f():

SIM110.py:184:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in iterable)` instead of `for` loop
    |
182 |   async def f():
183 |       # SIM110
184 | /     for x in iterable:
185 | |         if check(x):
186 | |             return True
187 | |     return False
    | |________________^ SIM110 (reimplemented-builtin)
188 |
189 |   async def f():
    |
    = help: Replace with `return any(check(x) for x in iterable)`

ℹ Unsafe fix
181 181 | 
182 182 | async def f():
183 183 |     # SIM110
184     |-    for x in iterable:
185     |-        if check(x):
186     |-            return True
187     |-    return False
    184 |+    return any(check(x) for x in iterable)
188 185 | 
189 186 | async def f():
190 187 |     # SIM110

SIM110.py:191:5: SIM110 (reimplemented-builtin) [*] Use `return any(check(x) for x in await iterable)` instead of `for` loop
    |
189 |   async def f():
190 |       # SIM110
191 | /     for x in await iterable:
192 | |         if check(x):
193 | |             return True
194 | |     return False
    | |________________^ SIM110 (reimplemented-builtin)
195 |
196 |   def f():
    |
    = help: Replace with `return any(check(x) for x in await iterable)`

ℹ Unsafe fix
188 188 | 
189 189 | async def f():
190 190 |     # SIM110
191     |-    for x in await iterable:
192     |-        if check(x):
193     |-            return True
194     |-    return False
    191 |+    return any(check(x) for x in await iterable)
195 192 | 
196 193 | def f():
197 194 |     # OK (can't turn this into any() because the yield would end up inside a genexp)
