crates/ruff_linter/src/rules/flake8_simplify/snapshots/ruff_linter__rules__flake8_simplify__tests__SIM112_SIM112.py.snap
---
source: crates/ruff_linter/src/rules/flake8_simplify/mod.rs
---
SIM112.py:4:12: SIM112 (uncapitalized-environment-variables) [*] Use capitalized environment variable `FOO` instead of `foo`
  |
3 | # Bad
4 | os.environ['foo']
  |            ^^^^^ SIM112 (uncapitalized-environment-variables)
5 |
6 | os.environ.get('foo')
  |
  = help: Replace `foo` with `FOO`

ℹ Unsafe fix
1 1 | import os
2 2 | 
3 3 | # Bad
4   |-os.environ['foo']
  4 |+os.environ['FOO']
5 5 | 
6 6 | os.environ.get('foo')
7 7 | 

SIM112.py:6:16: SIM112 (uncapitalized-environment-variables) Use capitalized environment variable `FOO` instead of `foo`
  |
4 | os.environ['foo']
5 |
6 | os.environ.get('foo')
  |                ^^^^^ SIM112 (uncapitalized-environment-variables)
7 |
8 | os.environ.get('foo', 'bar')
  |
  = help: Replace `foo` with `FOO`

SIM112.py:8:16: SIM112 (uncapitalized-environment-variables) Use capitalized environment variable `FOO` instead of `foo`
   |
 6 | os.environ.get('foo')
 7 |
 8 | os.environ.get('foo', 'bar')
   |                ^^^^^ SIM112 (uncapitalized-environment-variables)
 9 |
10 | os.getenv('foo')
   |
   = help: Replace `foo` with `FOO`

SIM112.py:10:11: SIM112 (uncapitalized-environment-variables) Use capitalized environment variable `FOO` instead of `foo`
   |
 8 | os.environ.get('foo', 'bar')
 9 |
10 | os.getenv('foo')
   |           ^^^^^ SIM112 (uncapitalized-environment-variables)
11 |
12 | env = os.environ.get('foo')
   |
   = help: Replace `foo` with `FOO`

SIM112.py:12:22: SIM112 (uncapitalized-environment-variables) Use capitalized environment variable `FOO` instead of `foo`
   |
10 | os.getenv('foo')
11 |
12 | env = os.environ.get('foo')
   |                      ^^^^^ SIM112 (uncapitalized-environment-variables)
13 |
14 | env = os.environ['foo']
   |
   = help: Replace `foo` with `FOO`

SIM112.py:14:18: SIM112 (uncapitalized-environment-variables) [*] Use capitalized environment variable `FOO` instead of `foo`
   |
12 | env = os.environ.get('foo')
13 |
14 | env = os.environ['foo']
   |                  ^^^^^ SIM112 (uncapitalized-environment-variables)
15 |
16 | if env := os.environ.get('foo'):
   |
   = help: Replace `foo` with `FOO`

ℹ Unsafe fix
11 11 | 
12 12 | env = os.environ.get('foo')
13 13 | 
14    |-env = os.environ['foo']
   14 |+env = os.environ['FOO']
15 15 | 
16 16 | if env := os.environ.get('foo'):
17 17 |     pass

SIM112.py:16:26: SIM112 (uncapitalized-environment-variables) Use capitalized environment variable `FOO` instead of `foo`
   |
14 | env = os.environ['foo']
15 |
16 | if env := os.environ.get('foo'):
   |                          ^^^^^ SIM112 (uncapitalized-environment-variables)
17 |     pass
   |
   = help: Replace `foo` with `FOO`

SIM112.py:19:22: SIM112 (uncapitalized-environment-variables) [*] Use capitalized environment variable `FOO` instead of `foo`
   |
17 |     pass
18 |
19 | if env := os.environ['foo']:
   |                      ^^^^^ SIM112 (uncapitalized-environment-variables)
20 |     pass
   |
   = help: Replace `foo` with `FOO`

ℹ Unsafe fix
16 16 | if env := os.environ.get('foo'):
17 17 |     pass
18 18 | 
19    |-if env := os.environ['foo']:
   19 |+if env := os.environ['FOO']:
20 20 |     pass
21 21 | 
22 22 |
